# DCCCSlicer

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md  docker-compose.core.yml
localizer/src/: CMakeLists.txt  README.md  cmake.ps1  conanfile.py  main.cpp
localizer/src/assets/configs/: config.fast_and_acc.toml  config.toml
localizer/src/assets/nii/: CenTauR.nii  voi_CerebGry_2mm.nii  voi_CerebGry_tau_2mm.nii  voi_WhlCbl_2mm.nii  voi_ctx_2mm.nii
localizer/src/calculators/: CenTauRCalculator.cpp  CenTauRCalculator.h  CenTauRzCalculator.cpp  CenTauRzCalculator.h  CentiloidCalculator.cpp  CentiloidCalculator.h  FillStatesCalculator.h  SUVrCalculator.cpp  SUVrCalculator.h
localizer/src/cli/: CommandHelpers.cpp  CommandHelpers.h  Commands.cpp  Commands.h  Options.cpp  Options.h
localizer/src/cmake/: CopyRuntimeDependencies.cmake
localizer/src/config/: Configuration.cpp  Version.h
localizer/src/core/: README.md
localizer/src/core/application/: PipelineApplication.cpp  PipelineApplication.h
localizer/src/core/common/: BatchLogging.cpp  BatchLogging.h  Common.h  Filesystem.cpp  Filesystem.h  ImageOps.cpp  ImageOps.h  ImageTypes.h  Logging.cpp  Logging.h  NiftiIO.cpp  NiftiIO.h  NiftiTypes.h  NormalizationContracts.h  OnnxPath.h  PathUtils.cpp  PathUtils.h  ProcessingContracts.h
localizer/src/core/config/: ConfigLoader.cpp  ConfigLoader.h  Configuration.cpp  Configuration.h  Version.h  Version.h.in
localizer/src/core/di/: Bootstrap.cpp  Bootstrap.h  ServiceContainer.h
localizer/src/core/interfaces/: IMetricCLI.h  IMetricCalculator.h  IMetricLogic.h  IMetricModuleRegistry.h  ISpatialNormalizationCLI.h  ISpatialNormalizer.h
localizer/src/core/normalizers/: NonlinearRegistrationEngine.cpp  NonlinearRegistrationEngine.h  RegistrationPipeline.h  RigidAlignmentNormalizer.cpp  RigidAlignmentNormalizer.h  RigidRegistrationEngine.cpp  RigidRegistrationEngine.h  RigidVoxelMorphNormalizer.cpp  RigidVoxelMorphNormalizer.h  VoxelMorphNormalizer.cpp  VoxelMorphNormalizer.h
localizer/src/core/preprocessing/: ImagePreprocessor.cpp  ImagePreprocessor.h
localizer/src/core/providers/: LegacyNormalizerProvider.cpp
localizer/src/core/services/: FileService.cpp  FileService.h  IFileService.h  IMetricService.h  ISpatialNormalizationService.h  MetricModuleRegistry.cpp  MetricModuleRegistry.h  MetricService.cpp  MetricService.h  SpatialNormalizationService.cpp  SpatialNormalizationService.h
localizer/src/decouplers/: Decoupler.cpp  Decoupler.h
localizer/src/factories/: MetricCalculatorFactory.cpp  MetricCalculatorFactory.h  SpatialNormalizerFactory.cpp  SpatialNormalizerFactory.h
localizer/src/interfaces/: IConfiguration.h  IMetricCalculator.h  ISpatialNormalizer.h
localizer/src/metrics/: ModuleCatalog.cpp  ModuleCatalog.h
localizer/src/metrics/abetaindex/: AbetaIndexCLI.cpp  AbetaIndexCLI.h  AbetaIndexCalculator.cpp  AbetaIndexCalculator.h  AbetaIndexModule.cpp  AbetaIndexModule.h  AbetaIndexService.cpp  AbetaIndexService.h
localizer/src/metrics/abetaload/: AbetaLoadCLI.cpp  AbetaLoadCLI.h  AbetaLoadCalculator.cpp  AbetaLoadCalculator.h  AbetaLoadLogic.cpp  AbetaLoadLogic.h  AbetaLoadModule.cpp  AbetaLoadModule.h  AbetaLoadService.cpp  AbetaLoadService.h
localizer/src/metrics/adad/: ADADCLI.cpp  ADADCLI.h  ADADLogic.cpp  ADADLogic.h  ADADModule.cpp  ADADModule.h  ADADService.cpp  ADADService.h  Decoupler.cpp  Decoupler.h
localizer/src/metrics/centaur/: CenTauRCLI.cpp  CenTauRCLI.h  CenTauRCalculator.cpp  CenTauRCalculator.h  CenTauRLogic.cpp  CenTauRLogic.h  CenTauRModule.cpp  CenTauRModule.h  CenTauRService.cpp  CenTauRService.h
localizer/src/metrics/centaurz/: CenTauRzCalculator.cpp  CenTauRzCalculator.h  CentaurzCLI.cpp  CentaurzCLI.h  CentaurzLogic.cpp  CentaurzLogic.h  CentaurzModule.cpp  CentaurzModule.h  CentaurzService.cpp  CentaurzService.h
localizer/src/metrics/centiloid/: CentiloidCLI.cpp  CentiloidCLI.h  CentiloidCalculator.cpp  CentiloidCalculator.h  CentiloidLogic.cpp  CentiloidLogic.h  CentiloidModule.cpp  CentiloidModule.h  CentiloidService.cpp  CentiloidService.h
localizer/src/metrics/fillstates/: FillStatesCLI.cpp  FillStatesCLI.h  FillStatesCalculator.cpp  FillStatesCalculator.h  FillStatesLogic.cpp  FillStatesLogic.h  FillStatesModule.cpp  FillStatesModule.h  FillStatesService.cpp  (+1 more)
localizer/src/normalizers/: ImagePreprocessor.cpp  ImagePreprocessor.h  NonlinearRegistrationEngine.cpp  NonlinearRegistrationEngine.h  RegistrationPipeline.cpp  RegistrationPipeline.h  RigidRegistrationEngine.cpp  RigidRegistrationEngine.h  RigidVoxelMorphNormalizer.cpp  RigidVoxelMorphNormalizer.h
localizer/src/pipeline/: BatchProcessor.cpp  BatchProcessor.h  ProcessingPipeline.cpp  ProcessingPipeline.h
localizer/src/preprocessing/: ImagePreprocessor.h
localizer/src/spatialNormalizations/: CLIOptions.cpp  CLIOptions.h  ModuleCatalog.cpp  ModuleCatalog.h  NullMetric.cpp  NullMetric.h
localizer/src/tests/: conftest.py  conftest_plugins.py  gt.csv  quick_test.py  test_abetaindex_cli.py  test_abetaload_cli.py  test_acc.py  test_acc_centiloid_centaurz_cli.py  test_acc_fill_states_cli.py  test_adad_cli.py  test_batch.py  test_batch_cli.py  test_centiloid_calculator.py  test_centiloid_centaurz_cli.py  test_fillstates_cli.py  test_nii_gz_cli.py  test_normalize_cli.py  test_quick.py  test_quick_cli.py  test_refactor_adad_cli.py  test_refactor_adni_pet_core_cli.py  test_refactor_centaurz_cli.py  test_refactor_centiloid_cli.py  test_refactor_fillstates_cli.py  test_refactor_normalize_cli.py  test_refactor_suvr_cli.py  test_suvr_cli.py  test_ui_metric_command_builder.py  test_unicode_paths_cli.py
localizer/src/utils/: common.cpp  common.h  onnx_path_utils.h
python/dcccpy/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
python/dcccpy-windows-runtime/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
python/dcccpy-windows-runtime/scripts/: vendor_dccccore.py
python/dcccpy/scripts/: vendor_dccccore.py
python/dcccpy/tests/: test_core.py  test_testpypi_centiloid.py
(+127 files in other folders)
