[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcccpy"
version = "0.1.0"
description = "Python wrapper for the DCCCcore PET biomarker command-line tool"
readme = "README.md"
requires-python = ">=3.9"
license = "CC-BY-NC-ND-4.0"
authors = [
  { name = "DCCCSlicer contributors" }
]
keywords = ["PET", "neuroimaging", "centiloid", "DCCC", "DCCCSlicer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/tctco/DCCCSlicer"
Repository = "https://github.com/tctco/DCCCSlicer"
Issues = "https://github.com/tctco/DCCCSlicer/issues"

[project.scripts]
dcccpy = "dcccpy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dcccpy = ["py.typed", "vendor/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
